grammar.js
    source_file: ($) => repeat($.statement),

    // comments

    identifier: (_) => identifier_rgx,

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._string_fragment, $.string_fragment),
              alias($._string_escape, $.escape_sequence),
            ),
          ),
          '"',
        ),
      ),

    _string_fragment: (_) => token.immediate(prec(1, /[^"\\\x00]+/)),
    _string_escape: (_) => token.immediate(/\\[n"\\]/),
    supremum: (_) => token(choice("#sup", "#supremum")),

    infimum: (_) => token(choice("#inf", "#infimum")),

    number: (_) =>
      token(
        choice(
          choice("0", /([1-9][0-9]*)/),
          token(seq("0x", /([0-9A-Fa-f]+)/)),
          token(seq("0o", /([1-7]+)/)),
          token(seq("0b", /([0-1]+)/)),
        ),
      ),

    anonymous: (_) => "_",

    variable: (_) => variable_rgx,

    _arg_pool: ($) =>
      seq(
        "(",
        choice(
          field("arguments", optional(alias($._terms_or_projection, $.terms))),
          $._arg_pool_n,
        ),
        ")",
      ),

    theory_operator: (_) =>
      token(
        choice(
          // the general pattern would be [/!<=>+\-*\\?&@|:;~\^\.]+,
          // but we have to exclude the four operators . : ; :-
          /[/!<=>+\-*\\?&@|~\^]/,
          /[/!<=>+\-*\\?&@|;~\^\.][/!<=>+\-*\\?&@|:;~\^\.]+/,
          /:[/!<=>+*\\?&@|:;~\^\.]/,
          /:[/!<=>+\-*\\?&@|:;~\^\.]{2,}/,
        ),
      ),

    _theory_operator: ($) =>
      choice($.theory_operator, alias($.default_negation, $.theory_operator)),

    theory_operators: ($) => repeat1($._theory_operator),

    theory_terms: ($) => seq($.theory_term, repeat(seq(",", $.theory_term))),

    _theory_arguments: ($) =>
      seq("(", optional(field("arguments", $.theory_terms)), ")"),

    theory_function: ($) =>
      seq(field("name", $.identifier), optional($._theory_arguments)),

    _theory_terms_trail: ($) =>
      choice(
        seq($.theory_term, repeat(seq(",", $.theory_term)), optional(",")),
        alias(",", $.lone_comma),
      ),

    theory_tuple: ($) =>
      seq("(", optional(alias($._theory_terms_trail, $.theory_terms)), ")"),

    theory_list: ($) => seq("[", optional($.theory_terms), "]"),

    theory_set: ($) => seq("{", optional($.theory_terms), "}"),

    theory_unparsed_term: ($) =>
      seq(
        optional($.theory_root_term),
        repeat1(seq($.theory_operators, $.theory_root_term)),
      ),

    symbolic_atom: ($) => seq($.atom_identifier, optional($._arg_pool)),

    literal: ($) =>
      seq(
        optional(field("sign", $.literal_sign)),
        field("atom", $.simple_atom),
      ),

    // aggregates

    condition: ($) => seq($.literal, repeat(seq(",", $.literal))),

    _condition: ($) =>
      seq(alias($.colon, ":"), optional(field("condition", $.condition))),

    theory_element: ($) =>
      choice(
        seq(field("theory_terms", $.theory_terms), optional($._condition)),
        $._condition,
      ),

    theory_elements: ($) =>
      seq($.theory_element, repeat(seq(";", $.theory_element))),

    theory_atom_upper: ($) => seq($._theory_operator, $.theory_term),

    theory_atom: ($) =>
      seq(
        "&",
        field("name", $.identifier),
        optional(field("arguments", $._arg_pool)),
        seq("{", optional(field("elements", $.theory_elements)), "}"),
        optional(field("right", $.theory_atom_upper)),
      ),

    // body literals

    rule: ($) =>
      seq(
        field("head", $.head),
        optional(seq(":-", field("body", $.body))),
        ".",
      ),

    theory_operator_arity: (_) => token("unary"),
    _theory_operator_arity_binary: (_) => token("binary"),

    theory_operator_associativity: (_) => token(choice("left", "right")),

    theory_operator_definition: ($) =>
      choice(
        seq(
          field("operator", $._theory_operator),
          alias($.colon, ":"),
          field("priority", $.number),
          ",",
          field("arity", $.theory_operator_arity),
        ),
        seq(
          field("operator", $._theory_operator),
          alias($.colon, ":"),
          field("priority", $.number),
          ",",
          field(
            "arity",
            alias($._theory_operator_arity_binary, $.theory_operator_arity),
          ),
          ",",
          field("associativity", $.theory_operator_associativity),
        ),
      ),

    theory_operator_definitions: ($) =>
      seq(
        $.theory_operator_definition,
        repeat(seq(";", $.theory_operator_definition)),
      ),

    theory_term_definition: ($) =>
      seq(
        field("name", $.identifier),
        "{",
        optional(field("operators", $.theory_operator_definitions)),
        "}",
      ),

    theory_atom_type: (_) => token(choice("head", "body", "any", "directive")),

    _theory_operators_sep: ($) =>
      seq($._theory_operator, repeat(seq(",", $._theory_operator))),

    theory_atom_definition: ($) =>
      seq(
        "&",
        field("name", $.identifier),
        "/",
        field("arity", $.number),
        alias($.colon, ":"),
        field("theory_term_name", $.identifier),
        ",",
        optional(
          seq(
            "{",
            optional(
              field(
                "operators",
                alias($._theory_operators_sep, $.theory_operators),
              ),
            ),
            "}",
            ",",
            field("guard", $.identifier),
            ",",
          ),
        ),
        field("atom_type", $.theory_atom_type),
      ),

    _theory_definitions: ($) =>
      choice(
        seq(
          $.theory_atom_definition,
          repeat(seq(";", $.theory_atom_definition)),
        ),
        seq(
          $.theory_term_definition,
          repeat(seq(";", $.theory_term_definition)),
          repeat(seq(";", $.theory_atom_definition)),
        ),
      ),

    theory: ($) =>
      seq(
        "#theory",
        field("name", $.identifier),
        "{",
        optional($._theory_definitions),
        "}",
        ".",
      ),
